# ChocoCompilerMLIR

./: CMakeLists.txt  README.md  commands.md
codegen/: AST.h  ASTPasses.cpp  ASTPasses.h  CMakeLists.txt  MLIRGen.cpp  lexer.cpp  parser.cpp
dialect/: CMakeLists.txt  ChocoDialect.cpp
include/: CMakeLists.txt
include/choco/: CMakeLists.txt  ChocoDialect.h  ChocoDialect.td  ChocoOps.td
lowering/: CMakeLists.txt  ChocoLowering.cpp  LowerToLLVM.cpp  Passes.h
output/: Makefile  example.ll  runtime.cpp
test/: assign.choco  if.choco  if_els.choco  if_els2.choco  if_els3.choco  if_els4.choco  if_els5.choco  if_els6.choco  lower_func.choco  null_return.choco  print_test.choco  var.choco
tools/: CMakeLists.txt  chococ.cpp
transform/: MulToAdd.cpp
